@@ -128,8 +128,12 @@
 (N is any number, like 12 or 0x34)
 
 &lt;b&gt;N&lt;/b&gt;     Exactly this number
+&lt;b&gt;?&lt;/b&gt;     Unknown initial value
 &lt;b&gt;&amp;lt;&lt;/b&gt;     Decreased values
 &lt;b&gt;&amp;gt;&lt;/b&gt;     Increased values
+&lt;b&gt;=&lt;/b&gt;     Unchanged values
+&lt;b&gt;&amp;lt; N&lt;/b&gt;   Greater than N
+&lt;b&gt;&amp;gt; N&lt;/b&gt;   Less than N
 </property>
                     <property name="xalign">1</property>
                     <property name="label" translatable="yes">Value:</property>
